bpo-36126: Fix ref count leakage in structseq_repr. (GH-12035)